@@ -138,6 +138,7 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.7.2</version>
                     <configuration>
+                       <!--<argLine>-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=512m -Xdebug -Xnoagent -Djava.compiler=NONE -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5005</argLine>-->
                         <!--<groups>bps,bps1</groups>-->
                         <testFailureIgnore>true</testFailureIgnore>
                         <disableXmlReport>false</disableXmlReport>
